--- a/app/views/accounts/_form.html.haml
+++ b/app/views/accounts/_form.html.haml
@@ -3,7 +3,8 @@
 -#  See the COPYING file at the top-level directory or at
 -#  https://github.com/puzzle/cryptopus.
 
-= form_for([team, @group, @account], role: 'form') do |f|
+= form_for([team, @group, @account], html: { role: 'form', autocomplete: 'off' }) do |f|
+  haalsf
   = f.error_messages
   .form-group
     = f.label :account
