Fix Geo IP DB for new License

--- a/app/views/admin/settings/_country_source_whitelist.html.haml
+++ b/app/views/admin/settings/_country_source_whitelist.html.haml
@@ -1,12 +1,13 @@
-.form-group
-  = hidden_field_tag 'setting[general_country_source_whitelist][]', ""
-  = label_tag 'Whitelisted Countries'
-  = select_tag 'setting[general_country_source_whitelist]', 
-      options_from_collection_for_select(Country.all, 'alpha2', 'name'),
-      multiple: true,
-      id: 'country-whitelist',
-      hidden: true,
-      'data-whitelist': Setting.value('general', 'country_source_whitelist')
+- if GeoIp.activated?
+  .form-group
+    = hidden_field_tag 'setting[general_country_source_whitelist][]', ""
+    = label_tag 'Whitelisted Countries'
+    = select_tag 'setting[general_country_source_whitelist]',
+        options_from_collection_for_select(Country.all, 'alpha2', 'name'),
+        multiple: true,
+        id: 'country-whitelist',
+        hidden: true,
+        'data-whitelist': Setting.value('general', 'country_source_whitelist')
 
-  %p
-    = "If nothing is selected, only private and whitelisted ips are authorized"
+    %p
+      = "If nothing is selected, only private and whitelisted ips are authorized"
