--- a/app/views/admin/maintenance_tasks/index.html.haml
+++ b/app/views/admin/maintenance_tasks/index.html.haml
@@ -5,19 +5,24 @@
 
 %h1= t '.title'
 
-%table.table.table-striped
+- if !@maintenance_tasks.empty?
+  %table.table.table-striped
+    %tr
+      %th{style: "width: 150px;"}= t '.maintenance_task'
+      %th= t :description
+      %th{colspan: "3"}= t :actions
+    - @maintenance_tasks.each do |task|
+      %tr{class: "#{cycle('odd', 'even')}"}
+        %td= task.label
+        %td= task.description
+        - if task.prepare?
+          %td= link_to t('admin.maintenance_tasks.index.prepare'), admin_maintenance_tasks_prepare_path(task.id)
+        - else
+          %td= link_to t('admin.maintenance_tasks.index.execute'), admin_maintenance_tasks_execute_path(task.id), method: :post
+- else
   %tr
-    %th{style: "width: 150px;"}= t '.maintenance_task'
-    %th= t :description
-    %th{colspan: "3"}= t :actions
-  - @maintenance_tasks.each do |task|
-    %tr{class: "#{cycle('odd', 'even')}"}
-      %td= task.label
-      %td= task.description
-      - if task.prepare?
-        %td= link_to t('admin.maintenance_tasks.index.prepare'), admin_maintenance_tasks_prepare_path(task.id)
-      - else
-        %td= link_to t('admin.maintenance_tasks.index.execute'), admin_maintenance_tasks_execute_path(task.id), method: :post
+    %td= t '.unavailable'
+
 
 %br
 
