Compacting app urls, refs #53107

--- a/app/assets/javascripts/templates/search/account_full.hbs.erb
+++ b/app/assets/javascripts/templates/search/account_full.hbs.erb
@@ -6,13 +6,13 @@ https://github.com/puzzle/cryptopus. }}
 <li class="result">
   <div class="result-description">
     <h1 class="result-title">
-      <a href="/teams/{{team_id}}/groups/{{group_id}}/accounts/{{id}}">{{accountname}}</a><br>
+      <a href="accounts/{{id}}">{{accountname}}</a><br>
     </h1
     <br>
     <span>
-      <a href="/teams/{{team_id}}/groups">{{team}}</a>
+      <a href="/teams/{{team_id}}">{{team}}</a>
       /
-      <a href="/teams/{{team_id}}/groups/{{group_id}}/accounts">{{group}}</a>
+      <a href="/teams/{{team_id}}/groups/{{group_id}}">{{group}}</a>
     </span>
   </div>
   <br>
