--- a/app/views/accounts/_form.html.haml
+++ b/app/views/accounts/_form.html.haml
@@ -3,7 +3,7 @@
 -#  See the COPYING file at the top-level directory or at
 -#  https://github.com/puzzle/cryptopus.
 
-= form_for([team, @group, @account], html: { role: 'form', autocomplete: 'off' }) do |f|
+= form_for([@account], html: { role: 'form', autocomplete: 'off' }) do |f|
   = f.error_messages
   .form-group
     = f.label :account
@@ -25,5 +25,6 @@
     %span#unencrypted
       (#{I18n.t('unencrypted_field_caption')})
     = f.text_area :description, class: 'form-control'
+    = f.hidden_field :group_id
     = f.submit @submit_button_text, class: 'btn btn-primary'
-    =link_to "Cancel", team_group_accounts_path(team_id: params[:team_id], id: params[:group_id] ), {:class=>"btn btn-primary"}
+    =link_to "Cancel", team_group_path(team, group), {:class=>"btn btn-primary"}
