--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -3,7 +3,7 @@
 -#  See the COPYING file at the top-level directory or at
 -#  https://github.com/puzzle/cryptopus.
 
-= link_to 'Edit', edit_team_group_account_path(@account.group.team.id, @account.group.id, @account.id), class: 'btn btn-primary pull-right'
+= link_to 'Edit', edit_account_path(@account.id), class: 'btn btn-primary pull-right'
 = link_to 'Move', '#', class: 'btn btn-primary pull-right', id: 'move_account_button'
 %h1= t '.title', account_name: @account.accountname
 %div
@@ -44,7 +44,7 @@
   %br/
   %br/
   %h1= t '.attachments'
-  = link_to 'New', new_team_group_account_item_path(@account.group.team.id, @account.group.id, @account.id), class: 'btn btn-primary pull-right'
+  = link_to 'New', new_account_item_path(@account), class: 'btn btn-primary pull-right'
   %table.table.table-striped
     %tr
       %th{style: "width: 200px;"}= t '.file'
@@ -53,9 +53,9 @@
     - for item in @items
       %tr{class: "#{cycle( 'odd', 'even' )}"}
         %td
-          = link_to image_tag("file.svg") + item.filename, [team, @group, @account, item], target: ''
+          = link_to image_tag("file.svg") + item.filename, account_item_path(@account, item)
         %td{valign: "top"}= simple_format item.description
-        %td.action_icon= link_to_destroy [team, @group, @account, item], item
+        %td.action_icon= link_to_destroy account_item_path(@account, item), item
 
 %div{id: "move_account_form"}
   = render 'move_account_form'
