--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -6,7 +6,7 @@
 %h1
   = t '.title'
   ( #{@account.accountname} )
-= form_for [team, @group, @account, @item], html: { multipart: true } do |f|
+= form_for [@account, @item], html: { multipart: true } do |f|
   = f.error_messages
   .form-group
     = f.label t('.upload')
@@ -16,4 +16,4 @@
     %br/
     = f.text_area :description, class: 'form-control'
   = f.submit t('.upload_file'), class: 'btn btn-primary'
-  =link_to "Cancel", team_group_account_path(team_id: params[:team_id], group_id: params[:group_id], id: params[:account_id] ), {:class=>"btn btn-primary"}
+  =link_to "Cancel", account_path(@account), {:class=>"btn btn-primary"}
