--- a/app/views/teams/_groups.html.haml
+++ b/app/views/teams/_groups.html.haml
@@ -4,7 +4,7 @@
 -#  https://github.com/puzzle/cryptopus.
 
 = hidden_field_tag :team_id, team.id
-= link_to t('groups.new.title'), new_team_group_path, class: 'btn btn-primary pull-right', id: 'group-button'
+= link_to t('groups.new.title'), new_team_group_path(team), class: 'btn btn-primary pull-right', id: 'group-button'
 %table.table.table-striped
   %tr
     %th{style: "width: 150px;"}= t '.group'
@@ -12,7 +12,7 @@
     %th{colspan: "3"}= t :actions
   - for group in @groups
     %tr{class: "#{cycle('odd', 'even')}"}
-      %td= link_to image_tag( "folder_open.svg" ) + " " + %Q{#{group.name}}, team_group_accounts_path(team, group)
+      %td= link_to image_tag( "folder_open.svg" ) + " " + %Q{#{group.name}}, team_group_path(team, group)
       %td= simple_format group.description
-      %td.action_icon= link_to image_tag("edit.svg"), [:edit, team, group]
-      %td.action_icon= link_to_destroy [team, group], group
+      %td.action_icon= link_to image_tag("edit.svg"), edit_team_group_path(team, group)
+      %td.action_icon= link_to_destroy team_group_path(team, group), group
