--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -3,9 +3,16 @@
 -#  See the COPYING file at the top-level directory or at
 -#  https://github.com/puzzle/cryptopus.
 
-- for column in Group.content_columns
-  %p
-    %b
-      = column.human_name
-      \:
-    = h @group.send(column.name)
+%h1= t '.title', group_name: @group.name, team_name: team.name
+= link_to t('accounts.new.title'), new_team_group_account_path(team, @group), class: 'btn btn-primary pull-right'
+%table.table.table-striped
+  %tr
+    %th{style: "width: 150px;"}= t '.account'
+    %th= t :description
+    %th{colspan: "3"}= t :actions
+  - @accounts.each do |account|
+    %tr{class: "#{cycle('odd', 'even')}"}
+      %td= link_to image_tag( "key.svg" ) + " " + account.accountname, [team, @group, account]
+      %td= simple_format account.description
+      %td.action_icon= link_to image_tag("edit.svg"), [:edit, team, @group, account]
+      %td.action_icon= link_to_destroy [team, @group, account], account
