--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -44,7 +44,7 @@
   %br/
   %br/
   %h1= t '.attachments'
-  = link_to 'New', new_account_item_path(@account.id), class: 'btn btn-primary pull-right'
+  = link_to 'New', new_account_item_path(@account.id, team), class: 'btn btn-primary pull-right'
   %table.table.table-striped
     %tr
       %th{style: "width: 200px;"}= t '.file'
@@ -53,7 +53,7 @@
     - for item in @items
       %tr{class: "#{cycle( 'odd', 'even' )}"}
         %td
-          = link_to image_tag("file.svg") + item.filename, [team, @group, @account, item], target: ''
+          = link_to image_tag("file.svg") + item.filename, [@account, item], target: ''
         %td{valign: "top"}= simple_format item.description
         %td.action_icon= link_to_destroy [team, @group, @account, item], item
 
