refactor account controller and locales

--- a/app/views/accounts/_form.html.haml
+++ b/app/views/accounts/_form.html.haml
@@ -25,5 +25,6 @@
     %span#unencrypted
       (#{I18n.t('unencrypted_field_caption')})
     = f.text_area :description, class: 'form-control'
+    = f.hidden_field :group_id
     = f.submit @submit_button_text, class: 'btn btn-primary'
     =link_to "Cancel", accounts_path(@account), {:class=>"btn btn-primary"}
