--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -44,7 +44,7 @@
   %br/
   %br/
   %h1= t '.attachments'
-  = link_to 'New', new_account_item_path(@account.id, team), class: 'btn btn-primary pull-right'
+  = link_to 'New', new_account_item_path(@account), class: 'btn btn-primary pull-right'
   %table.table.table-striped
     %tr
       %th{style: "width: 200px;"}= t '.file'
@@ -55,7 +55,7 @@
         %td
           = link_to image_tag("file.svg") + item.filename, [@account, item], target: ''
         %td{valign: "top"}= simple_format item.description
-        %td.action_icon= link_to_destroy [team, @group, @account, item], item
+        %td.action_icon= link_to_destroy [@account, item], item
 
 %div{id: "move_account_form"}
   = render 'move_account_form'
