--- a/app/views/accounts/_show_menu.html.haml
+++ b/app/views/accounts/_show_menu.html.haml
@@ -4,5 +4,5 @@
 -#  https://github.com/puzzle/cryptopus.
 
 %ul.nav.nav-pills
-  %li= link_to image_tag( "edit.svg" ) + " " + t(:edit), [:edit, team, @group, @account]
-  %li= link_to image_tag("add.svg") + " " + t('.add_attachment'), new_team_group_account_item_path(team, @group, @account)
+  %li= link_to image_tag( "edit.svg" ) + " " + t(:edit), [:edit, @account]
+  %li= link_to image_tag("add.svg") + " " + t('.add_attachment'), new_account_item_path(@account)
