Fix links in ui

--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -53,9 +53,9 @@
     - for item in @items
       %tr{class: "#{cycle( 'odd', 'even' )}"}
         %td
-          = link_to image_tag("file.svg") + item.filename, [@account, item], target: ''
+          = link_to image_tag("file.svg") + item.filename, account_item_path(@account, item)
         %td{valign: "top"}= simple_format item.description
-        %td.action_icon= link_to_destroy [@account, item], item
+        %td.action_icon= link_to_destroy account_item_path(@account, item), item
 
 %div{id: "move_account_form"}
   = render 'move_account_form'
