--- a/app/views/teams/index.html.haml
+++ b/app/views/teams/index.html.haml
@@ -19,6 +19,6 @@
       %td= simple_format team.description
       %td.action_icon= link_to image_tag( "edit.svg" ), edit_team_path( team )
       - if policy(team).destroy?
-        %td.action_icon= link_to_destroy [team], team
+        %td.action_icon= link_to_destroy team_path(team), team
       - else
         %td
