--- a/app/views/teams/show.html.haml
+++ b/app/views/teams/show.html.haml
@@ -6,7 +6,7 @@
 %h1
   = t '.title', team_name: team.name
   - if team.private?
-    =image_tag('encrypted_small.svg')
+    =image_pack_tag('encrypted_small.svg')
 %br
 
 %ul.teams-nav.nav.nav-tabs
