--- a/app/views/accounts/_edit_menu.html.haml
+++ b/app/views/accounts/_edit_menu.html.haml
@@ -4,4 +4,4 @@
 -#  https://github.com/puzzle/cryptopus.
 
 %ul.nav.nav-pills
-  %li= link_to image_tag( "viewmag.svg" ) + " " + t(:show), action: 'show', id: @account
+  %li= link_to image_pack_tag( "viewmag.svg" ) + " " + t(:show), action: 'show', id: @account
