--- a/app/views/groups/_groups.html.haml
+++ b/app/views/groups/_groups.html.haml
@@ -12,7 +12,7 @@
     %th{colspan: "3"}= t :actions
   - for group in @groups
     %tr{class: "#{cycle('odd', 'even')}"}
-      %td= link_to image_tag( "folder_open.svg" ) + " " + %Q{#{group.name}}, team_group_accounts_path(team, group)
+      %td= link_to image_pack_tag( "folder_open.svg" ) + " " + %Q{#{group.name}}, team_group_accounts_path(team, group)
       %td= simple_format group.description
-      %td.action_icon= link_to image_tag("edit.svg"), [:edit, team, group]
+      %td.action_icon= link_to image_pack_tag("edit.svg"), [:edit, team, group]
       %td.action_icon= link_to_destroy [team, group], group
