--- a/app/views/teams/_index_menu.html.haml
+++ b/app/views/teams/_index_menu.html.haml
@@ -4,4 +4,4 @@
 -#  https://github.com/puzzle/cryptopus.
 
 %ul.nav.nav-pills
-  %li= link_to image_tag( "add.svg" ) + " " + t('.create'), new_team_path
+  %li= link_to image_pack_tag( "add.svg" ) + " " + t('.create'), new_team_path
