--- a/app/views/teams/index.html.haml
+++ b/app/views/teams/index.html.haml
@@ -17,7 +17,7 @@
       - else
         %td= link_to image_tag( "members.svg" ) + " #{team.name}", team_path( team )
       %td= simple_format team.description
-      %td.action_icon= link_to image_tag( "edit.svg" ), edit_team_path( team )
+      %td.action_icon= link_to image_pack_tag( "edit.svg" ), edit_team_path( team )
       - if policy(team).destroy?
         %td.action_icon= link_to_destroy team_path(team), team
       - else
