--- a/app/views/teams/_groups.html.haml
+++ b/app/views/teams/_groups.html.haml
@@ -14,5 +14,5 @@
     %tr{class: "#{cycle('odd', 'even')}"}
       %td= link_to image_tag( "folder_open.svg" ) + " " + %Q{#{group.name}}, team_group_path(team, group)
       %td= simple_format group.description
-      %td.action_icon= link_to image_tag("edit.svg"), [:edit, team, group]
-      %td.action_icon= link_to_destroy [team, group], group
+      %td.action_icon= link_to image_tag("edit.svg"), edit_team_group_path(team, group)
+      %td.action_icon= link_to_destroy team_group_path(team, group), group
