--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,6 +14,7 @@
     = csrf_meta_tags
     %title Cryptopus
     = stylesheet_link_tag :application, media: "all"
+    = javascript_pack_tag 'stylesheets'
     = javascript_include_tag :application
   %body{"data-locale" => I18n.locale}
     = render 'layouts/icons'
