--- a/app/webpacker/packs/stylesheets.scss
+++ b/app/webpacker/packs/stylesheets.scss
@@ -8,3 +8,4 @@
 @import '../src/stylesheets/user.scss';
 @import '../src/stylesheets/team.scss';
 @import '../src/stylesheets/admin/teamlist.scss';
+@import '../src/stylesheets/custom.scss.less';
