--- a/app/views/accounts/_index_menu.html.haml
+++ b/app/views/accounts/_index_menu.html.haml
@@ -4,5 +4,5 @@
 -#  https://github.com/puzzle/cryptopus.
 
 %ul.nav.nav-pills
-  %li= link_to image_tag( "folder_open.svg" ) + " " + t('.groups'), team_groups_path(team)
-  %li= link_to image_tag("add.svg") + " " + t('.create'), new_account_path(team, @group)
+  %li= link_to image_pack_tag( "folder_open.svg" ) + " " + t('.groups'), team_groups_path(team)
+  %li= link_to image_pack_tag("add.svg") + " " + t('.create'), new_account_path(team, @group)
