--- a/app/views/layouts/_icons.html.haml
+++ b/app/views/layouts/_icons.html.haml
@@ -3,7 +3,7 @@
 -#  See the COPYING file at the top-level directory or at
 -#  https://github.com/puzzle/cryptopus.
 
-%svg{style: "display: none;", xmlns: "http://www.w3.org/2000/svg"}
+%svg{class: "display-none", xmlns: "http://www.w3.org/2000/svg"}
   %symbol#icon-eye{viewbox: "0 0 512 512"}
     %path{d: "m256 64c-96 0-208 64-256 192 48 96 144 160 256 160 112 0 208-64 256-160-48-128-160-192-256-192z m0 320c-96 0-176-64-192-128 16-64 96-128 192-128 96 0 176 64 192 128-16 64-96 128-192 128z m0-224c-10 0-19 2-28 5 17 7 28 24 28 43 0 27-21 48-48 48-19 0-36-11-43-28-3 9-5 18-5 28 0 53 43 96 96 96 53 0 96-43 96-96 0-53-43-96-96-96z"}
   %symbol#icon-clippy{viewbox: "0 0 512 512"}
