--- a/app/views/session/new.html.haml
+++ b/app/views/session/new.html.haml
@@ -4,7 +4,7 @@
 -#  https://github.com/puzzle/cryptopus.
 
 .login-form
-  = form_tag(sessions_path, method: 'post') do
+  = form_tag(session_path, method: :post) do
     %fieldset
       = image_pack_tag "cryptopussy.svg", class: 'logo'
       .form-group
