--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,7 +13,7 @@
     %link{href: "/favicon.png", rel: "shortcut icon", type: "image/png"}/
     = csrf_meta_tags
     %title Cryptopus
-    = stylesheet_link_tag :application, media: "all"
+    = stylesheet_link_tag :application, media: "all", nonce: true
     = javascript_include_tag :application, nonce: true
     = javascript_pack_tag 'stylesheets', nonce: true
     = javascript_pack_tag 'application', 'data-turbolinks-track': :reload, nonce: true
