--- a/app/webpacker/src/stylesheets/navbar.scss
+++ b/app/webpacker/src/stylesheets/navbar.scss
@@ -4,7 +4,7 @@
 //  https://github.com/puzzle/cryptopus.
 
 .navbar-inverse {
-  width: 100vw !important;
+  width: 100% !important;
 }
 
 .container {
