--- a/app/views/layouts/_locale.html.haml
+++ b/app/views/layouts/_locale.html.haml
@@ -5,7 +5,7 @@
 
 - user_locale = current_user.preferred_locale
 
-= form_tag(changelocale_login_path) do
+= form_tag(session_locale_path) do
   %select{name: "new_locale", id: "submit-action"}
     = options_for_select(I18n.available_locales.map{ |locale| [I18n.name_for_locale(locale), locale] }, user_locale)
 
