Fix ldaprecrypt form

--- a/app/views/recryptrequests/new_ldap_password.html.haml
+++ b/app/views/recryptrequests/new_ldap_password.html.haml
@@ -4,7 +4,7 @@
 -#  https://github.com/puzzle/cryptopus.
 
 %br/
-= form_tag action: 'recrypt' do
+= form_tag recryptrequests_recrypt_path do
   .alert.alert-info#ldap_info
     = t 'admin.recryptrequests.uncrypterror.ldap_password_changed'
     %br/
