--- a/app/views/admin/users/_form.html.haml
+++ b/app/views/admin/users/_form.html.haml
@@ -3,7 +3,7 @@
 -#  See the COPYING file at the top-level directory or at
 -#  https://github.com/puzzle/cryptopus.
 
-= form_for([:admin, @user], html:{ role: 'form'}, url: @url) do |f|
+= form_for([:admin, @user], html:{ role: 'form'}, url: @form_url) do |f|
   = f.error_messages
   .form-group
     = f.label :username
