--- a/app/assets/javascripts/templates/search/accounts_result_entries.hbs.erb
+++ b/app/assets/javascripts/templates/search/accounts_result_entries.hbs.erb
@@ -4,7 +4,7 @@ See the COPYING file at the top-level directory or at
 https://github.com/puzzle/cryptopus. }}
 
 {{#each .}}
-  <div class"result-entry">
+  <div class="result-entry">
     <li class="result-small account-entry"
       data-account-path="/api/accounts/{{id}}">
       <div class="result-description">
