Add missing end tag

--- a/app/assets/javascripts/templates/api_users.hbs.erb
+++ b/app/assets/javascripts/templates/api_users.hbs.erb
@@ -16,6 +16,7 @@
       <tbody id="api_users_table_body">
         {{> _api_user_row}}
       </tbody>
+    </table>
   {{else}}
     <p> {{I18n 'profile.api_users.no_api_users' }} </p>
   {{/if}}
