Adjusted attritbute names in handlebars

--- a/app/assets/javascripts/templates/search/account_full.hbs.erb
+++ b/app/assets/javascripts/templates/search/account_full.hbs.erb
@@ -10,9 +10,9 @@ https://github.com/puzzle/cryptopus. }}
     </h1>
     <br>
     <span>
-      <a href="/teams/{{team_id}}">{{team}}</a>
+      <a href="/teams/{{team_id}}">{{team_name}}</a>
       /
-      <a href="/teams/{{team_id}}/groups/{{group_id}}">{{group}}</a>
+      <a href="/teams/{{team_id}}/groups/{{group_id}}">{{group_name}}</a>
     </span>
   </div>
   <br>
