--- a/app/assets/javascripts/templates/search/accounts_result_entries.hbs.erb
+++ b/app/assets/javascripts/templates/search/accounts_result_entries.hbs.erb
@@ -10,7 +10,7 @@ https://github.com/puzzle/cryptopus. }}
       <div class="result-description">
         <%= image_tag("key.svg", class:"result-type-icon", alt:"Account" ) %>
         <h4 class="result-title-small account-link">{{accountname}}</h4>
-        <div class="team-group">{{team}} / {{group}}</div>
+        <div class="team-group">{{team_name}} / {{group_name}}</div>
       </div>
     </li>
   </div>
