Bug link in search result, refs: 54031
* Fix html typos

* Add missing end tag

* Add attributes in account serializer

* Adjusted attritbute names in handlebars

* deleted unused assignment

* Fix html typos

* Add missing end tag

* Add attributes in account serializer

* Adjusted attritbute names in handlebars

--- a/app/assets/javascripts/templates/search/account_full.hbs.erb
+++ b/app/assets/javascripts/templates/search/account_full.hbs.erb
@@ -7,12 +7,12 @@ https://github.com/puzzle/cryptopus. }}
   <div class="result-description">
     <h1 class="result-title">
       <a href="accounts/{{id}}">{{accountname}}</a><br>
-    </h1
+    </h1>
     <br>
     <span>
-      <a href="/teams/{{team_id}}">{{team}}</a>
+      <a href="/teams/{{team_id}}">{{team_name}}</a>
       /
-      <a href="/teams/{{team_id}}/groups/{{group_id}}">{{group}}</a>
+      <a href="/teams/{{team_id}}/groups/{{group_id}}">{{group_name}}</a>
     </span>
   </div>
   <br>
