--- a/app/assets/javascripts/templates/search/accounts_result_entries.hbs.erb
+++ b/app/assets/javascripts/templates/search/accounts_result_entries.hbs.erb
@@ -4,13 +4,13 @@ See the COPYING file at the top-level directory or at
 https://github.com/puzzle/cryptopus. }}
 
 {{#each .}}
-  <div class"result-entry">
+  <div class="result-entry">
     <li class="result-small account-entry"
       data-account-path="/api/accounts/{{id}}">
       <div class="result-description">
         <%= image_tag("key.svg", class:"result-type-icon", alt:"Account" ) %>
         <h4 class="result-title-small account-link">{{accountname}}</h4>
-        <div class="team-group">{{team}} / {{group}}</div>
+        <div class="team-group">{{team_name}} / {{group_name}}</div>
       </div>
     </li>
   </div>
